@@ -23,7 +23,7 @@ termplot(model, data = NULL, envir = environment(formula(model)),
          col.smth = "darkred", lty.smth = 2, span.smth = 2/3,
          ask = dev.interactive() && nb.fig < n.tms,
          use.factor.levels = TRUE, smooth = NULL, ylim = "common",
-         \dots)
+         plot = TRUE, \dots)
 }
 \arguments{
   \item{model}{fitted model object}
@@ -34,7 +34,7 @@ termplot(model, data = NULL, envir = environment(formula(model)),
   \item{rug}{add \link{rug}plots (jittered 1-d histograms) to the axes?}
   \item{terms}{which terms to plot (default \code{NULL} means all
     terms); a \code{\link{character}} vector, passed to
-    \code{\link{predict}(.., term="terms", terms = *)}.}
+    \code{\link{predict}(.., term = "terms", terms = *)}.}
   \item{se}{plot pointwise standard errors?}
   \item{xlabs}{vector of labels for the x axes}
   \item{ylabs}{vector of labels for the y axes}
@@ -59,16 +59,18 @@ termplot(model, data = NULL, envir = environment(formula(model)),
    \item{ylim}{an optional range for the y axis, or \code{"common"} when
      a range sufficient for all the plot will be computed, or
      \code{"free"} when limits are computed for each plot.}
+   \item{plot}{if set to \code{FALSE} plots are not produced: instead a
+     list is returned containing the data that would have been plotted.}
    \item{\dots}{other graphical parameters.}
 }
 \details{
-  The model object must have a \code{predict} method that accepts
-  \code{type=terms}, e.g., \code{\link{glm}} in the \pkg{base} package,
+  The \code{model} object must have a \code{predict} method that accepts
+  \code{type = terms}, e.g., \code{\link{glm}} in the \pkg{stats} package,
   \code{\link[survival]{coxph}} and \code{\link[survival]{survreg}} in
   the \CRANpkg{survival} package.
 
-  For the \code{partial.resid=TRUE} option it must have a
-  \code{\link{residuals}} method that accepts \code{type="partial"},
+  For the \code{partial.resid = TRUE} option \code{model} must have a
+  \code{\link{residuals}} method that accepts \code{type = "partial"},
   which \code{\link{lm}} and \code{\link{glm}} do.
 
   The \code{data} argument should rarely be needed, but in some cases
@@ -76,6 +78,21 @@ termplot(model, data = NULL, envir = environment(formula(model)),
   frame. Using \code{na.action=na.exclude} makes these problems less likely.
 
   Nothing sensible happens for interaction terms, and they may cause errors.
+  
+  The \code{plot = FALSE} option is useful when some special action is needed,
+  e.g. to overlay the results of two different models or to plot
+  confidence bands.
+}
+\value{
+  For \code{plot = FALSE}, a list with one element for each plot which
+  would have been produced.  Each element of the list is a data frame
+  with variables \code{x}, \code{y}, and optionally the pointwise
+  standard errors \code{se}. For continuous predictors \code{x} will
+  contain the ordered unique values and for a factor it will be a factor
+  containing one instance of each level.  The list has attribute
+  \code{"constant"} copied from the predicted terms object.
+
+  Otherwise, the number of terms, invisibly.
 }
 \seealso{For (generalized) linear models, \code{\link{plot.lm}} and
   \code{\link{predict.glm}}.}
